--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "weather app ",
   "scripts": {
-    "start": "webpack --progress --colors",
+    "start": "node server.js",
     "server:live": "webpack --progress --colors && live-server",
     "server:dev": "webpack-dev-server --progress --colors"
   },
